# SVM-HOG-Vehicle-Detection

./: BUS_SVM  CAR_SVM  CMakeLists.txt  Constants.h  CreateRawDataBGSubtraction.cpp  CreateRawDataConstantSize.cpp  CreateRawDataConstantSize.h  FindVehicles.cpp  MV_SVM  README.md  ResizeAllImages.cpp  TRUCK_SVM  Usage
